# Scaffold-ChunGS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md
.claude/: settings.json  settings.local.json
cfg/gaussian_mapper/: scaffold_chunks.yaml
examples/: scaffold_chunks_demo.cpp
include/scaffold_chunks/: anchor_mlp.h  chunk_types.h  config.h  depth_estimator.h  frustum_culler.h  gaussian_keyframe.h  gaussian_mapper.h  gaussian_model.h  gaussian_renderer.h  gaussian_scene.h  gaussian_viewer.h  keyframe_selection.h  loop_closing.h  slam_system.h  tracking.h  training_loss.h
scripts/: d_ablation.csv  gen_d_ablation.py  gen_io_figures.py  gen_kitti_figures.py  gen_viewcond_figures.py  io_chunk_size_ablation.csv  io_latency.csv  io_throughput.csv  io_training_impact.csv  kitti_ate_comparison.csv  kitti_chunk_scalability.csv  kitti_gpu_stability.csv  kitti_rendering_quality.csv  kitti_rpe_comparison.csv  kitti_runtime_breakdown.csv  kitti_scene_dependency.csv  kitti_storage_comparison.csv  lru_all_stats.json  lru_chunk_inventory.csv  lru_chunk_inventory_seq05.csv  lru_frame_trace.csv  lru_frame_trace_seq05.csv  lru_summary.txt  lru_summary_seq05.txt  make_3dgs_pipeline_nature.py  plot_lru.py  simulate_lru.py  viewcond_ablation.csv  viewcond_robustness.csv
src/depth/: depth_estimator.cpp
src/mapper/: mapper_core.cpp
src/model/: model_core.cpp  model_memory.cpp  model_mlp.cpp  model_optimization.cpp  model_storage.cpp
src/rendering/: frustum_culler.cpp  gaussian_renderer.cpp
src/scene/: gaussian_keyframe.cpp  gaussian_scene.cpp  keyframe_selection.cpp
src/slam/: builtin_adapter.cpp  loop_closing.cpp  tracking.cpp
src/training/: losses.cpp  trainer.cpp
src/viewer/: gaussian_viewer.cpp
thesis/: Makefile  README.md  aigc-check.tex  latexmkrc  main.synctex(busy)  main.tex  main.xdv  thesis.bib  毕业论文.docx
thesis/chapters/: ch1-intro.tex  ch2-background.tex  ch3-design.tex  ch4-experiments.tex  ch5-summary.tex
thesis/figures/: grfext.sty  tikz_3dgs_pipeline.tex
相关论文/: 论文综述与速览.md
论文要求/: 关于印发《本科毕业论文（设计）工作管理办法》的通知.doc  学士学位论文写作规范附件.docx  学士学位论文写作规范（2018版）.md  本科毕业论文（设计）相关附件.docx  相关附件_提取.txt  管理办法_提取.txt  附件_提取.txt
